# POVVER

./: Cargo.toml  LICENSE  README.md  build.rs  diff.sh
.cargo/: config.toml
src/: app_state.rs  data_transfer.rs  environment.rs  environment_types.rs  logger.rs  main.rs  months.rs  simulation.rs  speed.rs  timer.rs  ui_controller.rs  utils.rs  utils_data.rs  utils_random.rs  utils_traits.rs
src/economy/: economy_constants.rs  economy_types.rs  factory.rs  industries.rs  mod.rs  povver_plant.rs  products.rs  solarpanel.rs  the_hub.rs
src/entities/: energy.rs  industries.rs  mod.rs  money.rs  povver_plant.rs  products.rs
src/environment/: economy.rs  environment_types.rs  mod.rs  months.rs
src/simulation/: hub.rs  hub_comms.rs  hub_constants.rs  hub_events.rs  hub_jobs.rs  hub_signals.rs  hub_types.rs  mod.rs  sim_constants.rs  sim_types.rs  speed.rs  test_factories.rs  the_hub.rs  timer.rs
ui/: globals.slint  povver-main.slint  state.slint  theme.slint  utils.slint
ui/components/: digitcell.slint
ui/components/common/: datacell.slint  datatable.slint  digitcell.slint  map-item.slint  message.slint  panel-title.slint  spacer.slint  tab-button.slint  talkbaloon.slint
ui/components/control-panel/: control-panel.slint  date-time.slint  tabs.slint
ui/components/control-panel/tab-contents/: economy.slint  environment.slint  events.slint  industries.slint  povver-plant.slint  tab-content.slint
ui/components/map/: factory.slint  ground.slint  map.slint  pp.slint  sky.slint
ui/components/map/pp/: pp.slint
ui/components/pp/: pp.slint
